Fix navbar and footer on small screens

--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -18,6 +18,10 @@ nav {
         padding-right: $horizontalPadding;
     }
 
+    .navbar-toggler {
+        z-index: 1031;
+    }
+
     .nav-item > .nav-link {
         font-weight: 600;
         // color: $brand-primary!important;
